# eng

./: .gitignore  .ignore  LICENSE  README.md  models.db
.devcontainer/: build.Dockerfile  devcontainer.json
.devcontainer/agent/: default.profile  devcontainer.json
.devcontainer/trainer/: Dockerfile  devcontainer.json
agent/: .clangd  CMakeLists.txt  Dockerfile  Makefile  README.md  cmake_install.cmake  conanfile.txt  meson.build
agent/Source/Ai/: Model.hpp  Simulate.cpp  Utils.hpp
agent/Source/Core/: 6502.hpp  Controller.hpp  ROM.cpp
agent/src/: compile_commands.json
agent/src/Ai/: Model.cpp  Model.hpp  Score.cpp  Score.hpp  Simulate.cpp  Utils.hpp
agent/src/Core/: 6502.cpp  Controller.cpp  Controller.hpp  INESBus.hpp  RAM.cpp  RAM.hpp
agent/src/Desktop/: Main.cpp
agent/src/Web/: Episode.cpp  Episode.hpp  Fetch.cpp  Luigi.cpp  Luigi.hpp
doc/: Abstrakt_en.tex  Abstrakt_pl.tex  AppA.tex  Architektura.tex  Bibliografia.tex  Obrazy.tex  Oznaczenia.tex  PracaInz.lof  PracaInz.lot  PracaInz.tex  Projekt.tex  Przeglad.tex  Rezultaty.tex  Rozdzial1.tex  Rozdzial2.tex  Symbole.tex  Wstep.tex  pginz.cls
doc/img/: Figure1a.eps  Figure1b.eps  Figure3.eps
doc/plots/: 55_max_x.eps  epsilon.eps  max_x.eps  pos.eps  reward.eps
trainer/: Untitled-1.ipynb  aaamodels.db  compare_models.py  config.py  get_data.py  main.py  models.db  play.py  ply.py  pyproject.toml  rewards.json  test.py
trainer/game/: eval.py  runner.py
trainer/src/: db_handler.py  eval.py  logger.py  main.py  model.py  routes.py  trainer.py
trainer/src/game/: eval.py  runner.py
trainer/src/train/: model.py
trainer/train/: dqn_agent.py  dqn_trainer.py  evo.py  helpers.py  model.py  policy.py  policy_gradient_trainer.py  replay_buffer.py  trainer.py
trainer/util/: db_handler.py  index.html  logger.py  logs.html  recordings.html  recordings_handler.py  result_detail.html  results.html  routes.py
