[tool.poetry]
name = "trainer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
torchvision = "^0.19.1"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
SQLAlchemy = "^2.0.34"
black = "^24.8.0"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
